linked frontend to backend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,11 @@ nav {
 }
 
 #search_btn {
-  background-color: #febd69;
+  background-color: #9e701d;
+}
+
+#search_btn i {
+    color: white;
 }
 
 .input-group {
@@ -56,7 +60,8 @@ a{
 
 #login_btn,
 #view_btn {
-  background-color: #febd69;
+  background-color: #9e701d;
+  color: white;
   padding: 0.4rem 1.8rem;
   font-family: calibri;
 }
@@ -67,10 +72,10 @@ a{
 }
 
 #cart_count {
-  background-color: #febd69;
+  background-color: #9e701d;
   padding: 0.2rem 0.5rem;
   border-radius: 0.2rem;
-  color: black;
+  color: white;
   font-weight: bold;
   font-size: 0.9rem;
 }
@@ -251,7 +256,7 @@ footer {
 }
 
 #card_item_price {
-  color: #febd69;
+  color: #9e701d;
   font-weight: bold;
   font-size: 1.4rem;
 }
